--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
     "name": "roon-extension-cd-ripper",
-    "version": "0.3.0",
+    "version": "0.3.1",
     "description": "Extension that adds a CD ripper to your Roon system",
     "main": "cd-ripper.js",
     "author": "The Appgineer",
     "license": "Apache-2.0",
     "files": [],
     "dependencies": {
+        "chownr": "^1.1.2",
         "mkdirp": "^0.5.0",
         "recursive-copy": "^2.0.10",
         "rimraf": "^2.6.3",
